Fix broken style related to CRON expression editor component

--- a/src/components/CustomSelectComponent/CustomSelectComponent.module.scss
+++ b/src/components/CustomSelectComponent/CustomSelectComponent.module.scss
@@ -1,15 +1,3 @@
 .customSelectAddIcon {
     color: #296292;
 }
-
-.customSelectAddButton {
-    &:hover {
-        border-color: #296292 !important;
-    }
-    &:focus {
-        border-color: #296292 !important;
-    }
-    &:active {
-        border-color: #1c496e !important;
-    }
-}
